# funding-rate-arbitrage

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Caddyfile  Makefile  README.md  config.prod.yaml  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tssconfig.json
backend/: AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/scripts/: derive_bootstrap.py
backend/src/option_arb/: backtest.py  config.py  events.py  main.py  record.py  worker.py
backend/src/option_arb/api/: alerts.py  executor.py  health.py  opportunities.py  positions.py  stream.py  tickers.py  trades.py
backend/src/option_arb/db/: models.py  session.py
backend/src/option_arb/db/migrations/: env.py
backend/src/option_arb/db/migrations/versions/: 341aa1a8ef69_use_timestamptz_for_all_datetime_columns.py  (+3 more)
backend/src/option_arb/exchanges/: aevo.py  auth.py  base.py  deribit.py  derive.py  derive_auth.py  derive_constants.py  http.py  mock.py  naming.py  registry.py  slippage.py
backend/src/option_arb/market/: book_cache.py  ws_manager.py
backend/src/option_arb/services/: alerter.py  comparator.py  executor.py  rebalancer.py  screener.py
backend/tests/: conftest.py  test_adapters.py  test_alerter.py  test_alerter_persistence.py  test_api.py  test_auth.py  test_comparator.py  test_config.py  test_derive_auth.py  test_executor.py  test_executor_edge.py  test_http.py  test_mock_exchange.py  test_paper_mode_safety.py  test_rebalancer.py  test_screener.py  test_ws_manager.py
(+99 files in other folders)
